--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lint": "eslint weather-app --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "express": "^4.18.1",
     "serve-static": "^1.15.0",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
@@ -40,5 +42,10 @@
     "typescript": "~4.7.4",
     "vite": "^2.9.12",
     "vue-tsc": "^0.38.1"
+  },
+  "engines": {
+    "yarn": "1.x",
+    "npm": "7.x",
+    "node": "16.x"
   }
 }
