--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "lint": "eslint weather-app --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@meforma/vue-toaster": "^1.3.0",
     "axios": "^0.27.2",
     "express": "^4.18.1",
+    "luxon": "^2.4.0",
     "serve-static": "^1.15.0",
     "vue": "^3.2.37",
+    "vue-material-design-icons": "^5.0.0",
     "vue-router": "^4.0.16",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
+    "@types/luxon": "^2.3.2",
     "@types/node": "^16.11.41",
     "@vitejs/plugin-vue": "^2.3.3",
     "@vue/eslint-config-prettier": "^7.0.0",
