try deploying to heroku

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,28 @@
-build site:
-  image: node:16
+stages:
+  - build
+  - deploy
+
+build:
   stage: build
+  image: node:16
   script:
     - yarn install
     - yarn build
   artifacts:
-    expire_in: 1 week
     paths:
-      - dist
+      - dist/
+
 
 deploy:
-  image: alpine
   stage: deploy
+  image: "ruby"
   script:
-    - apk add --no-cache rsync openssh
-    - mkdir -p ~/.ssh
-    - echo "$SSH_PRIVATE_KEY" >> ~/.ssh/id_dsa
-    - chmod 600 ~/.ssh/id_dsa
-    - echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config
-    - rsync -rav --delete dist/ user@server.com:/your/project/path/
+    # install dpl:
+    - apt-get update -qy
+    - apt-get install rubygems ruby-dev -y
+    - gem install dpl
+    # deploy to heroku:
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY --skip_cleanup
+
+environment:
+  url: https://$HEROKU_APP_NAME.herokuapp.com
