update deploy commands

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,11 +15,8 @@ build:
 
 deploy:
   stage: deploy
-  image: "ruby"
   script:
     # install dpl:
-    - apt-get update -qy
-    - apt-get install rubygems ruby-dev -y
     - gem install dpl
     # deploy to heroku:
-    - dpl --provider=heroku --app_name=$HEROKU_APP_NAME --api_key=$HEROKU_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api_key=$HEROKU_API_KEY
