--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,4 +19,4 @@ deploy:
     - apt-get update -yq
     - apt-get install -y ruby-dev
     - gem install dpl
-    - dpl --provider=heroku --app=too-collins-weather-app --api_key=$HEROKU_STAGING_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_API_KEY --api_key=$HEROKU_STAGING_API_KEY
