--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,9 @@ build:
 deploy:
   stage: deploy
   script:
-    - apt-get update -yq
-    - apt-get install -y ruby-dev
-    - gem install dpl
-    - dpl --provider=heroku --app=$HEROKU_API_KEY --api_key=$HEROKU_STAGING_API_KEY
+    - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git
+    - git push -f heroku HEAD:dev
+#    - apt-get update -yq
+#    - apt-get install -y ruby-dev
+#    - gem install dpl
+#    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api_key=$HEROKU_STAGING_API_KEY
