--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - build
-  - deploy
+  - staging
 
 build:
   stage: build
@@ -12,12 +12,20 @@ build:
     paths:
       - dist/
 
-
-deploy:
+staging:
   stage: deploy
   script:
-    - git remote add heroku https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git
-    - git push -f heroku HEAD:dev
+    - apt-get update -qy
+    - apt-get install -y ruby-dev
+    - gem install dpl
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api_key=HEROKU_API_KEY
+  only:
+    - dev
+
+
+#deploy:
+#  stage: deploy
+#  script:
 #    - apt-get update -yq
 #    - apt-get install -y ruby-dev
 #    - gem install dpl
