--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,7 @@ deploy:
   script:
     - apt-get update -qy
     - apt-get install -y ruby-dev
+    - gem install faraday -v 1.10.0
     - gem install dpl
     - dpl --provider=heroku --app=$HEROKU_APP_NAME --api_key=HEROKU_API_KEY
   only:
