--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,7 +19,7 @@ deploy:
     - apt-get install -y ruby-dev
     - gem install faraday -v 1.10.0
     - gem install dpl
-    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api_key=HEROKU_API_KEY
+    - dpl --provider=heroku --app=$HEROKU_APP_NAME --api_key=$HEROKU_API_KEY
   only:
     - dev
 
